@@ -284,16 +284,48 @@ public class TestMultiMMap extends BaseDirectoryTestCase {
       IndexInput slicer = mmapDir.openInput("bytes", newIOContext(random()));
       for (int sliceStart = 0; sliceStart < bytes.length; sliceStart++) {
         for (int sliceLength = 0; sliceLength < bytes.length - sliceStart; sliceLength++) {
-          byte slice[] = new byte[sliceLength];
-          IndexInput input = slicer.slice("bytesSlice", sliceStart, slice.length);
-          input.readBytes(slice, 0, slice.length);
-          input.close();
-          assertEquals(new BytesRef(bytes, sliceStart, sliceLength), new BytesRef(slice));
+          assertSlice(bytes, slicer, 0, sliceStart, sliceLength);
         }
       }
       slicer.close();
       mmapDir.close();
     }
+  }
+
+  public void testSliceOfSlice() throws Exception {
+    for (int i = 0; i < 10; i++) {
+      MMapDirectory mmapDir = new MMapDirectory(createTempDir("testSliceOfSlice"), null, 1<<i);
+      IndexOutput io = mmapDir.createOutput("bytes", newIOContext(random()));
+      byte bytes[] = new byte[1<<(i+1)]; // make sure we switch buffers
+      random().nextBytes(bytes);
+      io.writeBytes(bytes, bytes.length);
+      io.close();
+      IndexInput ii = mmapDir.openInput("bytes", newIOContext(random()));
+      byte actual[] = new byte[1<<(i+1)]; // first read all bytes
+      ii.readBytes(actual, 0, actual.length);
+      ii.close();
+      assertEquals(new BytesRef(bytes), new BytesRef(actual));
+      IndexInput outerSlicer = mmapDir.openInput("bytes", newIOContext(random()));
+      final int outerSliceStart = random().nextInt(bytes.length / 2);
+      final int outerSliceLength = random().nextInt(bytes.length - outerSliceStart);
+      IndexInput innerSlicer = outerSlicer.slice("parentBytesSlice", outerSliceStart, outerSliceLength);
+      for (int sliceStart = 0; sliceStart < outerSliceLength; sliceStart++) {
+        for (int sliceLength = 0; sliceLength < outerSliceLength - sliceStart; sliceLength++) {
+          assertSlice(bytes, innerSlicer, outerSliceStart, sliceStart, sliceLength);
+        }
+      }
+      innerSlicer.close();
+      outerSlicer.close();
+      mmapDir.close();
+    }    
+  }
+  
+  private void assertSlice(byte[] bytes, IndexInput slicer, int outerSliceStart, int sliceStart, int sliceLength) throws IOException {
+    byte slice[] = new byte[sliceLength];
+    IndexInput input = slicer.slice("bytesSlice", sliceStart, slice.length);
+    input.readBytes(slice, 0, slice.length);
+    input.close();
+    assertEquals(new BytesRef(bytes, outerSliceStart + sliceStart, sliceLength), new BytesRef(slice));
   }
   
   public void testRandomChunkSizes() throws Exception {
@@ -331,6 +363,53 @@ public class TestMultiMMap extends BaseDirectoryTestCase {
       assertEquals("" + docID, reader.document(docID).get("docid"));
     }
     reader.close();
+    writer.close();
     dir.close();
+  }
+  
+  public void testImplementations() throws Exception {
+    for (int i = 2; i < 12; i++) {
+      final int chunkSize = 1<<i;
+      MMapDirectory mmapDir = new MMapDirectory(createTempDir("testImplementations"), null, chunkSize);
+      IndexOutput io = mmapDir.createOutput("bytes", newIOContext(random()));
+      int size = random().nextInt(chunkSize * 2) + 3; // add some buffer of 3 for slice tests
+      byte bytes[] = new byte[size];
+      random().nextBytes(bytes);
+      io.writeBytes(bytes, bytes.length);
+      io.close();
+      IndexInput ii = mmapDir.openInput("bytes", newIOContext(random()));
+      byte actual[] = new byte[size]; // first read all bytes
+      ii.readBytes(actual, 0, actual.length);
+      assertEquals(new BytesRef(bytes), new BytesRef(actual));
+      // reinit:
+      ii.seek(0L);
+      
+      // check impl (we must check size < chunksize: currently, if size==chunkSize, we get 2 buffers, the second one empty:
+      assertTrue((size < chunkSize) ? (ii instanceof ByteBufferIndexInput.SingleBufferImpl) : (ii instanceof ByteBufferIndexInput.DefaultImpl));
+      
+      // clone tests:
+      assertSame(ii.getClass(), ii.clone().getClass());
+      
+      // slice test (offset 0)
+      int sliceSize = random().nextInt(size);
+      IndexInput slice = ii.slice("slice", 0, sliceSize);
+      assertTrue((sliceSize < chunkSize) ? (slice instanceof ByteBufferIndexInput.SingleBufferImpl) : (slice instanceof ByteBufferIndexInput.DefaultImpl));
+
+      // slice test (offset > 0 )
+      int offset = random().nextInt(size - 1) + 1;
+      sliceSize = random().nextInt(size - offset + 1);
+      slice = ii.slice("slice", offset, sliceSize);
+      //System.out.println(offset + "/" + sliceSize + " chunkSize=" + chunkSize + " " + slice.getClass());
+      if (offset % chunkSize + sliceSize < chunkSize) {
+        assertTrue(slice instanceof ByteBufferIndexInput.SingleBufferImpl);
+      } else if (offset % chunkSize == 0) {
+        assertTrue(slice instanceof ByteBufferIndexInput.DefaultImpl);
+      } else {
+        assertTrue(slice instanceof ByteBufferIndexInput.WithOffsetImpl);
+      }
+
+      ii.close();
+      mmapDir.close();
+    }    
   }
 }
